--- a/module-1/pipelines-project/your-code/PipelineWorldPopulationPercentageChange.ipynb
+++ b/module-1/pipelines-project/your-code/PipelineWorldPopulationPercentageChange.ipynb
@@ -71,24 +71,21 @@
     "    chart_pct = pctchange.plot.line(legend=True, use_index=True, figsize=(17,10), title = \"Percentage Change \\n Most to least populated contries vs World population \\n x axis = 70's, 80's, 90's, 00's, 10's \\n y axis = %\")\n",
     "    return chart_pct\n",
     "\n",
-    "def save_viz_1(chart):\n",
-    "    fig = chart.get_figure()\n",
-    "    fig.savefig(\"Most populated countries\" + \".png\")\n",
+    "def save_viz_3(c, name):\n",
+    "    fig = c.get_figure()\n",
+    "    fig.savefig(name + \".png\")\n",
+    "    print(\"Se ha guardado la imagen: {}\".format(name))\n",
     "\n",
-    "def save_viz_2(chart_pct):\n",
-    "    fig = chart_pct.get_figure()\n",
-    "    fig.savefig(\"Population Percentage Change\" + \".png\")\n",
     "    \n",
     "if __name__ == '__main__':\n",
     "    demo = acquire()\n",
     "    filtered = wrangle(demo)\n",
     "    max_pob = analyze_1(filtered)\n",
     "    chart = visualize_1(max_pob)\n",
-    "    save_viz_1(chart)\n",
+    "    save_viz_3(chart, 'Most populated countries')\n",
     "    pctchange = analyze_2(filtered)\n",
     "    chart_pct = visualize_2(pctchange)\n",
-    "    save_viz_2(chart_pct)\n",
-    "    \n"
+    "    save_viz_3(chart_pct, 'Population Percentage Change')"
    ]
   },
   {
