--- a/module-1/lab-bag-of-words/your-code/main.ipynb
+++ b/module-1/lab-bag-of-words/your-code/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,13 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "corpus = []\n",
     "\n",
-    "# Write your code here"
+    "# Write your code here\n",
+    "\n",
+    "for doc in docs:\n",
+    "    f = open(doc, 'r')\n",
+    "    corpus.append(f.read().lower().strip(\".\"))"
    ]
   },
   {
@@ -43,9 +47,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack is cool', 'i love ironhack', 'i am a student at ironhack']\n"
+     ]
+    }
+   ],
    "source": [
     "print(corpus)"
    ]
@@ -86,13 +98,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "bag_of_words = []\n",
     "\n",
-    "# Write your code here"
+    "# Write your code here\n",
+    "\n",
+    "for x in corpus:\n",
+    "    words = x.split()\n",
+    "    for y in words:\n",
+    "        if y not in bag_of_words:\n",
+    "            bag_of_words.append(y)\n"
    ]
   },
   {
@@ -106,9 +124,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack', 'is', 'cool', 'i', 'love', 'am', 'a', 'student', 'at']\n"
+     ]
+    }
+   ],
    "source": [
     "print(bag_of_words)"
    ]
@@ -122,13 +148,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "term_freq = []\n",
     "\n",
-    "# Write your code here"
+    "# Write your code here\n",
+    "\n",
+    "#Este es complicado...!\n",
+    "        \n",
+    "for i, c in enumerate(corpus): #con enumerate, se crea una tupla (i, c) con los elementos de la lista (c) con su índice (i).\n",
+    "    term_freq.append([]) #con esto estamos haciendo que term_freq sea una matriz de 2 dimensiones vacía.\n",
+    "    for f in bag_of_words:\n",
+    "        if f in c.split(' '):\n",
+    "            term_freq[i].append(1) #con esto estamos cogiendo el índice de cada doc y haciendo append de 1 si la palabra está en en split de c.\n",
+    "        elif f not in c.split(' '):\n",
+    "            term_freq[i].append(0)\n",
+    "    \n",
+    "    \n",
+    "     "
    ]
   },
   {
@@ -142,9 +181,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 1, 1, 0, 0, 0, 0, 0, 0], [1, 0, 0, 1, 1, 0, 0, 0, 0], [1, 0, 0, 1, 0, 1, 1, 1, 1]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(term_freq)"
    ]
