--- a/module-1/lab-bag-of-words/your-code/bonus.ipynb
+++ b/module-1/lab-bag-of-words/your-code/bonus.ipynb
@@ -22,14 +22,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack', 'cool', 'love', 'student']\n",
+      "[[1, 1, 0, 0], [1, 0, 1, 0], [1, 0, 0, 1]]\n"
+     ]
+    }
+   ],
    "source": [
     "stop_words = ['all', 'six', 'less', 'being', 'indeed', 'over', 'move', 'anyway', 'fifty', 'four', 'not', 'own', 'through', 'yourselves', 'go', 'where', 'mill', 'only', 'find', 'before', 'one', 'whose', 'system', 'how', 'somewhere', 'with', 'thick', 'show', 'had', 'enough', 'should', 'to', 'must', 'whom', 'seeming', 'under', 'ours', 'has', 'might', 'thereafter', 'latterly', 'do', 'them', 'his', 'around', 'than', 'get', 'very', 'de', 'none', 'cannot', 'every', 'whether', 'they', 'front', 'during', 'thus', 'now', 'him', 'nor', 'name', 'several', 'hereafter', 'always', 'who', 'cry', 'whither', 'this', 'someone', 'either', 'each', 'become', 'thereupon', 'sometime', 'side', 'two', 'therein', 'twelve', 'because', 'often', 'ten', 'our', 'eg', 'some', 'back', 'up', 'namely', 'towards', 'are', 'further', 'beyond', 'ourselves', 'yet', 'out', 'even', 'will', 'what', 'still', 'for', 'bottom', 'mine', 'since', 'please', 'forty', 'per', 'its', 'everything', 'behind', 'un', 'above', 'between', 'it', 'neither', 'seemed', 'ever', 'across', 'she', 'somehow', 'be', 'we', 'full', 'never', 'sixty', 'however', 'here', 'otherwise', 'were', 'whereupon', 'nowhere', 'although', 'found', 'alone', 're', 'along', 'fifteen', 'by', 'both', 'about', 'last', 'would', 'anything', 'via', 'many', 'could', 'thence', 'put', 'against', 'keep', 'etc', 'amount', 'became', 'ltd', 'hence', 'onto', 'or', 'con', 'among', 'already', 'co', 'afterwards', 'formerly', 'within', 'seems', 'into', 'others', 'while', 'whatever', 'except', 'down', 'hers', 'everyone', 'done', 'least', 'another', 'whoever', 'moreover', 'couldnt', 'throughout', 'anyhow', 'yourself', 'three', 'from', 'her', 'few', 'together', 'top', 'there', 'due', 'been', 'next', 'anyone', 'eleven', 'much', 'call', 'therefore', 'interest', 'then', 'thru', 'themselves', 'hundred', 'was', 'sincere', 'empty', 'more', 'himself', 'elsewhere', 'mostly', 'on', 'fire', 'am', 'becoming', 'hereby', 'amongst', 'else', 'part', 'everywhere', 'too', 'herself', 'former', 'those', 'he', 'me', 'myself', 'made', 'twenty', 'these', 'bill', 'cant', 'us', 'until', 'besides', 'nevertheless', 'below', 'anywhere', 'nine', 'can', 'of', 'your', 'toward', 'my', 'something', 'and', 'whereafter', 'whenever', 'give', 'almost', 'wherever', 'is', 'describe', 'beforehand', 'herein', 'an', 'as', 'itself', 'at', 'have', 'in', 'seem', 'whence', 'ie', 'any', 'fill', 'again', 'hasnt', 'inc', 'thereby', 'thin', 'no', 'perhaps', 'latter', 'meanwhile', 'when', 'detail', 'same', 'wherein', 'beside', 'also', 'that', 'other', 'take', 'which', 'becomes', 'you', 'if', 'nobody', 'see', 'though', 'may', 'after', 'upon', 'most', 'hereupon', 'eight', 'but', 'serious', 'nothing', 'such', 'why', 'a', 'off', 'whereby', 'third', 'i', 'whole', 'noone', 'sometimes', 'well', 'amoungst', 'yours', 'their', 'rather', 'without', 'so', 'five', 'the', 'first', 'whereas', 'once']\n",
     "\n",
-    "# Write your code below"
+    "# Write your code below\n",
+    "\n",
+    "docs = ['doc1.txt', 'doc2.txt', 'doc3.txt']\n",
+    "\n",
+    "corpus = []\n",
+    "\n",
+    "for doc in docs:\n",
+    "    f = open(doc, 'r')\n",
+    "    corpus.append(f.read().lower().strip(\".\"))\n",
+    "    \n",
+    "bag_of_words = []\n",
+    "\n",
+    "\n",
+    "for x in corpus:\n",
+    "    words = x.split()\n",
+    "    for y in words:      \n",
+    "        if y in stop_words:\n",
+    "            pass\n",
+    "        elif y not in bag_of_words: #Acabo de descubrir que si usas otro if en vez de elif, arriba tienes que poner continue en vez de pass. Al poner elif, encadenas los if's, entonces puedes poner pass.\n",
+    "            bag_of_words.append(y)\n",
+    "\n",
+    "term_freq = []\n",
+    "\n",
+    "        \n",
+    "for i, c in enumerate(corpus): #con enumerate, se crea una tupla (i, c) con los elementos de la lista (c) con su índice (i).\n",
+    "    term_freq.append([]) #con esto estamos haciendo que term_freq sea una matriz de 2 dimensiones vacía.\n",
+    "    for f in bag_of_words:\n",
+    "        if f in c.split(' '):\n",
+    "            term_freq[i].append(1) #con esto estamos cogiendo el índice de cada doc y haciendo append de 1 si la palabra está en en split de c.\n",
+    "        elif f not in c.split(' '):\n",
+    "            term_freq[i].append(0)\n",
+    "\n",
+    "            \n",
+    "print(bag_of_words)\n",
+    "print(term_freq)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -48,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
