--- a/module-1/web-project/your-code/apiscraping.ipynb
+++ b/module-1/web-project/your-code/apiscraping.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import requests\n",
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "import re\n"
    ]
   },
   {
@@ -349,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -451,57 +452,147 @@
        "      <td>http://find.myrecipes.com/recipes/recipefinder...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>10</th>\n",
        "      <td>Death by Chocolate Chocolate Chocolate Chocola...</td>\n",
        "      <td>baking soda, butter, eggs, flour, sugar, brown...</td>\n",
        "      <td>http://www.recipezaar.com/Death-by-Chocolate-C...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Chocolate Chocolate Chocolate Butterscotch Chi...</td>\n",
+       "      <td>cocoa powder, baking soda, brown sugar, butter...</td>\n",
+       "      <td>http://www.grouprecipes.com/50195/chocolate-ch...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Chocolate Chocolate Chocolate Cashew Cookies (...</td>\n",
+       "      <td>baking soda, brown sugar, butter, chocolate, e...</td>\n",
+       "      <td>http://www.recipezaar.com/Chocolate-Chocolate-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Gluten-Free Chocolate Chocolate Chocolate!!! C...</td>\n",
+       "      <td>butter, chili powder, eggs, baking powder, flo...</td>\n",
+       "      <td>http://www.recipezaar.com/Gluten-Free-Chocolat...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Chocolate-Chocolate-Chocolate Brownies</td>\n",
+       "      <td>sugar, flour, eggs, butter</td>\n",
+       "      <td>http://www.cooks.com/rec/view/0,1910,153177-24...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Hawaiian Vintage Chocolate Chocolate Souffle w...</td>\n",
+       "      <td>triple sec, powdered sugar, egg whites, egg yo...</td>\n",
+       "      <td>http://www.foodnetwork.com/recipes/emeril-laga...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Chocolate Pate A Choux Dough, for Chocolate Pr...</td>\n",
+       "      <td>cocoa powder, powdered sugar, eggs, bread flou...</td>\n",
+       "      <td>http://www.foodnetwork.com/recipes/emeril-laga...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Chocolate-Chocolate-Chocolate-Chip Fudge Cake</td>\n",
+       "      <td>butter, butter, sugar, eggs, flour, cocoa powd...</td>\n",
+       "      <td>http://www.bigoven.com/68958-Chocolate-Chocola...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Double Chocolate Cookies &amp;amp; Mint Chocolate ...</td>\n",
+       "      <td>flour, cocoa powder, baking soda, butter, eggs...</td>\n",
+       "      <td>http://www.recipezaar.com/Double-Chocolate-Coo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>White Chocolate, Chocolate Cookies</td>\n",
+       "      <td>baking soda, brown sugar, cocoa powder, eggs, ...</td>\n",
+       "      <td>http://allrecipes.com/Recipe/White-Chocolate-C...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Quick N Easy Basic Tomatoe Sauce Recipe</td>\n",
+       "      <td>bay leaves, onions, ground beef, oregano, basi...</td>\n",
+       "      <td>http://www.grouprecipes.com/57990/quick-n-easy...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                              Recipe  \\\n",
-       "0                        Vegetable-Pasta Oven Omelet   \n",
-       "1                    Roasted Pepper and Bacon Omelet   \n",
-       "2                  \\nBroccoli Oven Omelet Recipe\\n\\n   \n",
-       "3         Eggplant Omelet with Coriander and Caraway   \n",
-       "4         Eggplant Omelet with Coriander And Caraway   \n",
-       "5                         Broccoli and Cheese Omelet   \n",
-       "6                             Chard And Onion Omelet   \n",
-       "7                       Picnic Omelet Squares Recipe   \n",
-       "8                                     Spanish Omelet   \n",
-       "9      Onion and Fresh Herb Omelet with Mixed Greens   \n",
-       "0  Death by Chocolate Chocolate Chocolate Chocola...   \n",
+       "                                               Recipe  \\\n",
+       "0                         Vegetable-Pasta Oven Omelet   \n",
+       "1                     Roasted Pepper and Bacon Omelet   \n",
+       "2                   \\nBroccoli Oven Omelet Recipe\\n\\n   \n",
+       "3          Eggplant Omelet with Coriander and Caraway   \n",
+       "4          Eggplant Omelet with Coriander And Caraway   \n",
+       "5                          Broccoli and Cheese Omelet   \n",
+       "6                              Chard And Onion Omelet   \n",
+       "7                        Picnic Omelet Squares Recipe   \n",
+       "8                                      Spanish Omelet   \n",
+       "9       Onion and Fresh Herb Omelet with Mixed Greens   \n",
+       "10  Death by Chocolate Chocolate Chocolate Chocola...   \n",
+       "11  Chocolate Chocolate Chocolate Butterscotch Chi...   \n",
+       "12  Chocolate Chocolate Chocolate Cashew Cookies (...   \n",
+       "13  Gluten-Free Chocolate Chocolate Chocolate!!! C...   \n",
+       "14             Chocolate-Chocolate-Chocolate Brownies   \n",
+       "15  Hawaiian Vintage Chocolate Chocolate Souffle w...   \n",
+       "16  Chocolate Pate A Choux Dough, for Chocolate Pr...   \n",
+       "17      Chocolate-Chocolate-Chocolate-Chip Fudge Cake   \n",
+       "18  Double Chocolate Cookies &amp; Mint Chocolate ...   \n",
+       "19                 White Chocolate, Chocolate Cookies   \n",
+       "20            Quick N Easy Basic Tomatoe Sauce Recipe   \n",
        "\n",
-       "                                         Ingredients  \\\n",
-       "0  tomato, onions, red pepper, garlic, olive oil,...   \n",
-       "1  eggs, salt, black pepper, butter, black pepper...   \n",
-       "2  eggs, broccoli, onions, parmesan cheese, lowfa...   \n",
-       "3  caraway seed, coriander, eggplant, eggs, garli...   \n",
-       "4  eggplant, olive oil, onions, garlic, egg, cara...   \n",
-       "5  onions, garlic, chicken broth, cottage cheese,...   \n",
-       "6  olive oil, onions, leaves, garlic, eggs, parsl...   \n",
-       "7  eggs, garlic, parmesan cheese, olive oil, onio...   \n",
-       "8  vegetable oil, green pepper, onions, water, mi...   \n",
-       "9  egg substitute, milk, parsley, thyme, salt, bl...   \n",
-       "0  baking soda, butter, eggs, flour, sugar, brown...   \n",
+       "                                          Ingredients  \\\n",
+       "0   tomato, onions, red pepper, garlic, olive oil,...   \n",
+       "1   eggs, salt, black pepper, butter, black pepper...   \n",
+       "2   eggs, broccoli, onions, parmesan cheese, lowfa...   \n",
+       "3   caraway seed, coriander, eggplant, eggs, garli...   \n",
+       "4   eggplant, olive oil, onions, garlic, egg, cara...   \n",
+       "5   onions, garlic, chicken broth, cottage cheese,...   \n",
+       "6   olive oil, onions, leaves, garlic, eggs, parsl...   \n",
+       "7   eggs, garlic, parmesan cheese, olive oil, onio...   \n",
+       "8   vegetable oil, green pepper, onions, water, mi...   \n",
+       "9   egg substitute, milk, parsley, thyme, salt, bl...   \n",
+       "10  baking soda, butter, eggs, flour, sugar, brown...   \n",
+       "11  cocoa powder, baking soda, brown sugar, butter...   \n",
+       "12  baking soda, brown sugar, butter, chocolate, e...   \n",
+       "13  butter, chili powder, eggs, baking powder, flo...   \n",
+       "14                         sugar, flour, eggs, butter   \n",
+       "15  triple sec, powdered sugar, egg whites, egg yo...   \n",
+       "16  cocoa powder, powdered sugar, eggs, bread flou...   \n",
+       "17  butter, butter, sugar, eggs, flour, cocoa powd...   \n",
+       "18  flour, cocoa powder, baking soda, butter, eggs...   \n",
+       "19  baking soda, brown sugar, cocoa powder, eggs, ...   \n",
+       "20  bay leaves, onions, ground beef, oregano, basi...   \n",
        "\n",
-       "                            Link to the whole recipe  \n",
-       "0  http://find.myrecipes.com/recipes/recipefinder...  \n",
-       "1  http://www.bigoven.com/43919-Roasted-Pepper-an...  \n",
-       "2  http://cookeatshare.com/recipes/broccoli-oven-...  \n",
-       "3  http://www.epicurious.com/recipes/food/views/E...  \n",
-       "4  http://www.bigoven.com/143831-Eggplant-Omelet-...  \n",
-       "5  http://www.bigoven.com/45151-Broccoli-and-Chee...  \n",
-       "6  http://www.bigoven.com/149383-Chard-And-Onion-...  \n",
-       "7  http://www.cdkitchen.com/recipes/recs/2184/Pic...  \n",
-       "8  http://www.cooks.com/rec/view/0,185,153160-249...  \n",
-       "9  http://find.myrecipes.com/recipes/recipefinder...  \n",
-       "0  http://www.recipezaar.com/Death-by-Chocolate-C...  "
+       "                             Link to the whole recipe  \n",
+       "0   http://find.myrecipes.com/recipes/recipefinder...  \n",
+       "1   http://www.bigoven.com/43919-Roasted-Pepper-an...  \n",
+       "2   http://cookeatshare.com/recipes/broccoli-oven-...  \n",
+       "3   http://www.epicurious.com/recipes/food/views/E...  \n",
+       "4   http://www.bigoven.com/143831-Eggplant-Omelet-...  \n",
+       "5   http://www.bigoven.com/45151-Broccoli-and-Chee...  \n",
+       "6   http://www.bigoven.com/149383-Chard-And-Onion-...  \n",
+       "7   http://www.cdkitchen.com/recipes/recs/2184/Pic...  \n",
+       "8   http://www.cooks.com/rec/view/0,185,153160-249...  \n",
+       "9   http://find.myrecipes.com/recipes/recipefinder...  \n",
+       "10  http://www.recipezaar.com/Death-by-Chocolate-C...  \n",
+       "11  http://www.grouprecipes.com/50195/chocolate-ch...  \n",
+       "12  http://www.recipezaar.com/Chocolate-Chocolate-...  \n",
+       "13  http://www.recipezaar.com/Gluten-Free-Chocolat...  \n",
+       "14  http://www.cooks.com/rec/view/0,1910,153177-24...  \n",
+       "15  http://www.foodnetwork.com/recipes/emeril-laga...  \n",
+       "16  http://www.foodnetwork.com/recipes/emeril-laga...  \n",
+       "17  http://www.bigoven.com/68958-Chocolate-Chocola...  \n",
+       "18  http://www.recipezaar.com/Double-Chocolate-Coo...  \n",
+       "19  http://allrecipes.com/Recipe/White-Chocolate-C...  \n",
+       "20  http://www.grouprecipes.com/57990/quick-n-easy...  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,8 +606,17 @@
     "column_order = ['Recipe', 'Ingredients', 'Link to the whole recipe']\n",
     "\n",
     "recipemachine = recipemachine[column_order]\n",
-    "recipemachine.head(11)"
+    "reseting = recipemachine.reset_index()\n",
+    "recipemachine = reseting.drop('index', axis=1)\n",
+    "recipemachine.head(21)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
