--- a/module-1/web-project/your-code/apiscraping.ipynb
+++ b/module-1/web-project/your-code/apiscraping.ipynb
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1232,18 +1232,10 @@
        " 'ice cream',\n",
        " 'etc.',\n",
        " 'eggs',\n",
-       " 'from chickens',\n",
-       " 'quails',\n",
-       " 'ostriches',\n",
-       " 'fish.',\n",
-       " 'bee products',\n",
-       " 'honey',\n",
-       " 'bee pollen',\n",
-       " 'royal jelly',\n",
-       " 'etc.']"
+       " 'egg']"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1261,12 +1253,13 @@
     "q = [word.split(' and ') for word in w]\n",
     "a = [item for sublist in q for item in sublist]\n",
     "novegan = [word.strip(' ').lower() for word in a]\n",
+    "novegan.append('egg')\n",
     "novegan"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1275,7 +1268,7 @@
        "True"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1301,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1321,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1385,7 +1378,7 @@
        "      <td>Eggplant Omelet with Coriander And Caraway</td>\n",
        "      <td>eggplant, olive oil, onions, garlic, egg, cara...</td>\n",
        "      <td>http://www.bigoven.com/143831-Eggplant-Omelet-...</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1916,7 +1909,7 @@
        "1    http://www.bigoven.com/43919-Roasted-Pepper-an...                False  \n",
        "2    http://cookeatshare.com/recipes/broccoli-oven-...                False  \n",
        "3    http://www.epicurious.com/recipes/food/views/E...                False  \n",
-       "4    http://www.bigoven.com/143831-Eggplant-Omelet-...                 True  \n",
+       "4    http://www.bigoven.com/143831-Eggplant-Omelet-...                False  \n",
        "5    http://www.bigoven.com/45151-Broccoli-and-Chee...                False  \n",
        "6    http://www.bigoven.com/149383-Chard-And-Onion-...                False  \n",
        "7    http://www.cdkitchen.com/recipes/recs/2184/Pic...                False  \n",
@@ -1977,7 +1970,7 @@
        "[240 rows x 4 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1989,10 +1982,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Export to .csv a mi carpeta your-code\n",
+    "\n",
     "data = recipemachine.to_csv('Recipes.csv', index=False)\n",
     "data"
    ]
