--- a/module-2/lab-subsetting-and-descriptive-stats/your-code/main.ipynb
+++ b/module-2/lab-subsetting-and-descriptive-stats/your-code/main.ipynb
@@ -22,12 +22,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# import libraries here"
+    "# import libraries here\n",
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -881,7 +881,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
