--- a/module-2/lab-subsetting-and-descriptive-stats/your-code/main.ipynb
+++ b/module-2/lab-subsetting-and-descriptive-stats/your-code/main.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,13 +48,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# your answer here\n"
+    "# your answer here\n",
+    "temp = pd.read_csv('Temp_States.csv')"
    ]
   },
   {
@@ -66,10 +65,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Temperature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NYC</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>19.444444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Albany</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>9.444444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Buffalo</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>3.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Hartford</td>\n",
+       "      <td>Connecticut</td>\n",
+       "      <td>17.222222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bridgeport</td>\n",
+       "      <td>Connecticut</td>\n",
+       "      <td>14.444444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Treton</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>22.222222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Newark</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>20.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         City        State  Temperature\n",
+       "0         NYC     New York    19.444444\n",
+       "1      Albany     New York     9.444444\n",
+       "2     Buffalo     New York     3.333333\n",
+       "3    Hartford  Connecticut    17.222222\n",
+       "4  Bridgeport  Connecticut    14.444444\n",
+       "5      Treton   New Jersey    22.222222\n",
+       "6      Newark   New Jersey    20.000000"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -80,11 +170,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "City            object\n",
+       "State           object\n",
+       "Temperature    float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your answer here\n"
+    "# your answer here\n",
+    "temp.dtypes"
    ]
   },
   {
@@ -96,11 +201,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Temperature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NYC</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>19.444444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Albany</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>9.444444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Buffalo</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>3.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Hartford</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>17.222222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bridgeport</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>14.444444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Treton</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>22.222222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Newark</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>20.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         City     State  Temperature\n",
+       "0         NYC  New York    19.444444\n",
+       "1      Albany  New York     9.444444\n",
+       "2     Buffalo  New York     3.333333\n",
+       "3    Hartford  New York    17.222222\n",
+       "4  Bridgeport  New York    14.444444\n",
+       "5      Treton  New York    22.222222\n",
+       "6      Newark  New York    20.000000"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your answer here"
+    "# your answer here\n",
+    "temp[\"State\"] = 'New York'\n",
+    "temp"
    ]
   },
   {
@@ -112,11 +308,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Temperature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NYC</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>19.444444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Albany</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>9.444444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Buffalo</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>3.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Hartford</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>17.222222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bridgeport</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>14.444444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Treton</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>22.222222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Newark</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>20.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         City     State  Temperature\n",
+       "0         NYC  New York    19.444444\n",
+       "1      Albany  New York     9.444444\n",
+       "2     Buffalo  New York     3.333333\n",
+       "3    Hartford  New York    17.222222\n",
+       "4  Bridgeport  New York    14.444444\n",
+       "5      Treton  New York    22.222222\n",
+       "6      Newark  New York    20.000000"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your answer here\n"
+    "# your answer here\n",
+    "temp[temp[\"State\"] == 'New York']"
    ]
   },
   {
@@ -128,11 +414,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Temperature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NYC</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>19.444444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Hartford</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>17.222222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Treton</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>22.222222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Newark</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>20.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       City     State  Temperature\n",
+       "0       NYC  New York    19.444444\n",
+       "3  Hartford  New York    17.222222\n",
+       "5    Treton  New York    22.222222\n",
+       "6    Newark  New York    20.000000"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your answer here\n"
+    "# your answer here\n",
+    "temp[temp['Temperature'] > float(15)]"
    ]
   },
   {
@@ -144,11 +499,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         NYC\n",
+       "3    Hartford\n",
+       "5      Treton\n",
+       "6      Newark\n",
+       "Name: City, dtype: object"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your answer here"
+    "# your answer here\n",
+    "temp[\"City\"][temp['Temperature'] > float(15)]"
    ]
   },
   {
@@ -162,11 +533,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Temperature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NYC</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>19.444444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Hartford</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>17.222222</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       City     State  Temperature\n",
+       "0       NYC  New York    19.444444\n",
+       "3  Hartford  New York    17.222222"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your answer here\n"
+    "# your answer here\n",
+    "temp[(temp[\"Temperature\"] > float(15)) & (temp[\"Temperature\"] < float(20))]"
    ]
   },
   {
@@ -180,11 +606,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Temperature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>7.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>15.158730</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>6.695265</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>3.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>11.944444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>17.222222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>19.722222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>22.222222</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Temperature\n",
+       "count     7.000000\n",
+       "mean     15.158730\n",
+       "std       6.695265\n",
+       "min       3.333333\n",
+       "25%      11.944444\n",
+       "50%      17.222222\n",
+       "75%      19.722222\n",
+       "max      22.222222"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your answer here\n"
+    "# your answer here\n",
+    "temp.describe()"
    ]
   },
   {
