--- a/module-2/lab-matplotlib-seaborn/your-code/challenge-1.ipynb
+++ b/module-2/lab-matplotlib-seaborn/your-code/challenge-1.ipynb
@@ -34,12 +34,10 @@
    "source": [
     "# import libraries here\n",
     "import numpy as np\n",
-    "'''\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "%matplotlib inline\n",
-    "'''"
+    "%matplotlib inline\n"
    ]
   },
   {
@@ -162,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
