--- a/module-2/lab-matplotlib-seaborn/your-code/challenge-3.ipynb
+++ b/module-2/lab-matplotlib-seaborn/your-code/challenge-3.ipynb
@@ -1058,7 +1058,7 @@
     "\n",
     "#Esto es muy guay!!\n",
     "gender = sns.FacetGrid(data=titanic, col='Gender')\n",
-    "gender.map(plt.hist,'Age')"
+    "gender.map(plt.hist,'Age')\n"
    ]
   },
   {
