--- a/module-2/lab-plotting-multiple-data-series/your-code/main.ipynb
+++ b/module-2/lab-plotting-multiple-data-series/your-code/main.ipynb
@@ -424,9 +424,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "retail_sales_vs_transf = sns.lmplot(x=\"RetailSales\", y=\"RetailTransfers\", hue=\"ItemCode\", data=data)\n",
-    "sns.color_palette('pastel')\n",
-    "retail_sales_vs_transf"
+    "sns.lmplot(x=\"RetailSales\", y=\"RetailTransfers\", hue=\"ItemCode\", data=data)"
    ]
   },
   {
@@ -443,7 +441,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sns.pairplot"
+   ]
   }
  ],
  "metadata": {
