--- a/module-2/tableau-project/your-code/tableau_project.ipynb
+++ b/module-2/tableau-project/your-code/tableau_project.ipynb
@@ -468,6 +468,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Para crear la columna 'position' donde estarán las coordenadas y el type de coordenadas en un diccionario (así lo interpreta Tableau)\n",
+    "\n",
     "position = []\n",
     "\n",
     "for i in range(len(offices_cos)):\n",
