--- a/module-2/tableau-project/your-code/tableau_project.ipynb
+++ b/module-2/tableau-project/your-code/tableau_project.ipynb
@@ -489,6 +489,7 @@
    "outputs": [],
    "source": [
     "# Me lo descargo para importar la versión limpia en MongoDB (para borrar el anterior, --drop en Terminal mongoimport)\n",
+    "# En Terminal : mongoimport --db companies --collection clean (--drop) --file  visualize_companies.json\n",
     "\n",
     "offices_cos.to_json('visualize_companies.json', orient=\"records\", lines = True)"
    ]
