--- a/module-2/lab-hypothesis-testing/your-code/main.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/main.ipynb
@@ -17,7 +17,8 @@
    "outputs": [],
    "source": [
     "# import numpy and pandas\n",
-    "\n"
+    "import numpy as np\n",
+    "import pandas as pd\n"
    ]
   },
   {
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,12 +50,342 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Job Titles</th>\n",
+       "      <th>Department</th>\n",
+       "      <th>Full or Part-Time</th>\n",
+       "      <th>Salary or Hourly</th>\n",
+       "      <th>Typical Hours</th>\n",
+       "      <th>Annual Salary</th>\n",
+       "      <th>Hourly Rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AARON,  JEFFERY M</td>\n",
+       "      <td>SERGEANT</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>101442.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AARON,  KARINA</td>\n",
+       "      <td>POLICE OFFICER (ASSIGNED AS DETECTIVE)</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>94122.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AARON,  KIMBERLEI R</td>\n",
+       "      <td>CHIEF CONTRACT EXPEDITER</td>\n",
+       "      <td>GENERAL SERVICES</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>101592.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ABAD JR,  VICENTE M</td>\n",
+       "      <td>CIVIL ENGINEER IV</td>\n",
+       "      <td>WATER MGMNT</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>110064.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ABASCAL,  REECE E</td>\n",
+       "      <td>TRAFFIC CONTROL AIDE-HOURLY</td>\n",
+       "      <td>OEMC</td>\n",
+       "      <td>P</td>\n",
+       "      <td>Hourly</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>ABBASI,  CHRISTOPHER</td>\n",
+       "      <td>STAFF ASST TO THE ALDERMAN</td>\n",
+       "      <td>CITY COUNCIL</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>50436.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>ABBATACOLA,  ROBERT J</td>\n",
+       "      <td>ELECTRICAL MECHANIC</td>\n",
+       "      <td>AVIATION</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Hourly</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>46.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>ABBATE,  JOSEPH L</td>\n",
+       "      <td>POOL MOTOR TRUCK DRIVER</td>\n",
+       "      <td>STREETS &amp; SAN</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Hourly</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>35.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>ABBATEMARCO,  JAMES J</td>\n",
+       "      <td>FIRE ENGINEER-EMT</td>\n",
+       "      <td>FIRE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>103350.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>ABBATE,  TERRY M</td>\n",
+       "      <td>POLICE OFFICER</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>93354.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>ABBOTT,  BETTY L</td>\n",
+       "      <td>FOSTER GRANDPARENT</td>\n",
+       "      <td>FAMILY &amp; SUPPORT</td>\n",
+       "      <td>P</td>\n",
+       "      <td>Hourly</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>ABDALLAH,  ZAID</td>\n",
+       "      <td>POLICE OFFICER</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>84054.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>ABDELHADI,  ABDALMAHD</td>\n",
+       "      <td>POLICE OFFICER</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>87006.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>ABDELLATIF,  AREF R</td>\n",
+       "      <td>FIREFIGHTER (PER ARBITRATORS AWARD)-PARAMEDIC</td>\n",
+       "      <td>FIRE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>102228.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>ABDELMAJEID,  AZIZ</td>\n",
+       "      <td>POLICE OFFICER</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>84054.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>ABDOLLAHZADEH,  ALI</td>\n",
+       "      <td>FIREFIGHTER/PARAMEDIC</td>\n",
+       "      <td>FIRE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>91272.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>ABDUL-KARIM,  MUHAMMAD A</td>\n",
+       "      <td>ENGINEERING TECHNICIAN VI</td>\n",
+       "      <td>WATER MGMNT</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>111492.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>ABDULLAH,  DANIEL N</td>\n",
+       "      <td>FIREFIGHTER-EMT</td>\n",
+       "      <td>FIRE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>95484.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>ABDULLAH,  LAKENYA N</td>\n",
+       "      <td>CROSSING GUARD</td>\n",
+       "      <td>OEMC</td>\n",
+       "      <td>P</td>\n",
+       "      <td>Hourly</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>17.68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>ABDULLAH,  RASHAD</td>\n",
+       "      <td>ELECTRICAL MECHANIC (AUTOMOTIVE)</td>\n",
+       "      <td>GENERAL SERVICES</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Hourly</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>46.10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Name                                     Job Titles  \\\n",
+       "0          AARON,  JEFFERY M                                       SERGEANT   \n",
+       "1            AARON,  KARINA          POLICE OFFICER (ASSIGNED AS DETECTIVE)   \n",
+       "2        AARON,  KIMBERLEI R                       CHIEF CONTRACT EXPEDITER   \n",
+       "3        ABAD JR,  VICENTE M                              CIVIL ENGINEER IV   \n",
+       "4          ABASCAL,  REECE E                    TRAFFIC CONTROL AIDE-HOURLY   \n",
+       "5      ABBASI,  CHRISTOPHER                      STAFF ASST TO THE ALDERMAN   \n",
+       "6      ABBATACOLA,  ROBERT J                            ELECTRICAL MECHANIC   \n",
+       "7         ABBATE,  JOSEPH L                         POOL MOTOR TRUCK DRIVER   \n",
+       "8      ABBATEMARCO,  JAMES J                              FIRE ENGINEER-EMT   \n",
+       "9           ABBATE,  TERRY M                                 POLICE OFFICER   \n",
+       "10          ABBOTT,  BETTY L                             FOSTER GRANDPARENT   \n",
+       "11          ABDALLAH,  ZAID                                  POLICE OFFICER   \n",
+       "12    ABDELHADI,  ABDALMAHD                                  POLICE OFFICER   \n",
+       "13       ABDELLATIF,  AREF R  FIREFIGHTER (PER ARBITRATORS AWARD)-PARAMEDIC   \n",
+       "14       ABDELMAJEID,  AZIZ                                  POLICE OFFICER   \n",
+       "15      ABDOLLAHZADEH,  ALI                           FIREFIGHTER/PARAMEDIC   \n",
+       "16  ABDUL-KARIM,  MUHAMMAD A                      ENGINEERING TECHNICIAN VI   \n",
+       "17       ABDULLAH,  DANIEL N                                FIREFIGHTER-EMT   \n",
+       "18      ABDULLAH,  LAKENYA N                                 CROSSING GUARD   \n",
+       "19        ABDULLAH,  RASHAD                ELECTRICAL MECHANIC (AUTOMOTIVE)   \n",
+       "\n",
+       "          Department Full or Part-Time Salary or Hourly  Typical Hours  \\\n",
+       "0             POLICE                 F           Salary            NaN   \n",
+       "1             POLICE                 F           Salary            NaN   \n",
+       "2   GENERAL SERVICES                 F           Salary            NaN   \n",
+       "3        WATER MGMNT                 F           Salary            NaN   \n",
+       "4               OEMC                 P           Hourly           20.0   \n",
+       "5       CITY COUNCIL                 F           Salary            NaN   \n",
+       "6           AVIATION                 F           Hourly           40.0   \n",
+       "7      STREETS & SAN                 F           Hourly           40.0   \n",
+       "8               FIRE                 F           Salary            NaN   \n",
+       "9             POLICE                 F           Salary            NaN   \n",
+       "10  FAMILY & SUPPORT                 P           Hourly           20.0   \n",
+       "11            POLICE                 F           Salary            NaN   \n",
+       "12            POLICE                 F           Salary            NaN   \n",
+       "13              FIRE                 F           Salary            NaN   \n",
+       "14            POLICE                 F           Salary            NaN   \n",
+       "15              FIRE                 F           Salary            NaN   \n",
+       "16       WATER MGMNT                 F           Salary            NaN   \n",
+       "17              FIRE                 F           Salary            NaN   \n",
+       "18              OEMC                 P           Hourly           20.0   \n",
+       "19  GENERAL SERVICES                 F           Hourly           40.0   \n",
+       "\n",
+       "    Annual Salary  Hourly Rate  \n",
+       "0        101442.0          NaN  \n",
+       "1         94122.0          NaN  \n",
+       "2        101592.0          NaN  \n",
+       "3        110064.0          NaN  \n",
+       "4             NaN        19.86  \n",
+       "5         50436.0          NaN  \n",
+       "6             NaN        46.10  \n",
+       "7             NaN        35.60  \n",
+       "8        103350.0          NaN  \n",
+       "9         93354.0          NaN  \n",
+       "10            NaN         2.65  \n",
+       "11        84054.0          NaN  \n",
+       "12        87006.0          NaN  \n",
+       "13       102228.0          NaN  \n",
+       "14        84054.0          NaN  \n",
+       "15        91272.0          NaN  \n",
+       "16       111492.0          NaN  \n",
+       "17        95484.0          NaN  \n",
+       "18            NaN        17.68  \n",
+       "19            NaN        46.10  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "salaries.head(20)"
    ]
   },
   {
@@ -280,7 +611,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
