Con Bonus, ayuda de Alberto

--- a/module-2/lab-hypothesis-testing/your-code/main.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/main.ipynb
@@ -800,11 +800,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-3.5099964213703005\n",
+      "0.0004481127249057967\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "from statsmodels.stats.proportion import proportions_ztest\n",
+    "\n",
+    "stat, pval = proportions_ztest(count=salaries['Salary or Hourly'].value_counts()[1], nobs=salaries.shape[0], value=0.25)\n",
+    "\n",
+    "print(stat)\n",
+    "print(pval)\n"
    ]
   },
   {
