--- a/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
+++ b/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
@@ -17,7 +17,14 @@
    "outputs": [],
    "source": [
     "# import numpy and pandas\n",
-    "\n"
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from scipy.stats import ttest_rel\n",
+    "from scipy.stats import ttest_1samp\n",
+    "from scipy.stats import norm\n",
+    "from scipy.stats import binom\n",
+    "from scipy.stats import normaltest\n"
    ]
   },
   {
@@ -366,7 +373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
